--- a/board/genimage-raspberrypi4.cfg
+++ b/board/genimage-raspberrypi4.cfg
@@ -12,7 +12,7 @@ image boot.vfat {
       "zImage"
     }
   }
-  size = 16M
+  size = 32M
 }
 
 image sdcard.img {
@@ -27,6 +27,6 @@ image sdcard.img {
 
   partition rootfs {
     partition-type = 0x83
-    image = "rootfs.squashfs"
+    image = "rootfs.ext4"
   }
 }
