uvc-gadget init

--- a/configs/config
+++ b/configs/config
@@ -43,3 +43,4 @@ BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_PIWEBCAM=y
 BR2_PACKAGE_CAMERA_CONTROL=y
 BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_PICAM_PATH)/patches/linux-custom"
+BR2_SYSTEM_BIN_SH_BASH=y
